--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
   args: ["--cache=true", "--cache-ttl=48h", "--destination=gcr.io/$PROJECT_ID/pokedex:latest"]
   # Deploy container image to Cloud Run
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ['beta', 'run', 'deploy', 'pokedex', '--image', 'gcr.io/$PROJECT_ID/pokedex:latest', '--region', 'europe-west1', '--allow-unauthenticated', '--platform', 'managed']
+  args: ['beta', 'run', 'deploy', 'pokedex', '--image', 'gcr.io/$PROJECT_ID/pokedex:latest', '--region', 'europe-west1', '--allow-unauthenticated', '--platform', 'managed', '--memory', '1024Mi']
